# ChangeLog for sys-libs/ncurses
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.202 2012/05/03 20:36:20 maekke Exp $

  03 May 2012; Markus Meier <maekke@gentoo.org> ncurses-5.9-r2.ebuild:
  arm stable, bug #413897

  01 May 2012; Agostino Sarubbo <ago@gentoo.org> ncurses-5.9-r2.ebuild:
  Stable for amd64, wrt bug #413897

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> ncurses-5.9-r2.ebuild:
  keyword ~amd64-fbsd

  11 Mar 2012; Mike Frysinger <vapier@gentoo.org> ncurses-5.9-r2.ebuild:
  Make sure gpm is in RDEPEND too #407061 by Maxim Kammerer.

*ncurses-5.9-r2 (29 Feb 2012)

  29 Feb 2012; Alex Alexander <wired@gentoo.org> +ncurses-5.9-r2.ebuild,
  +files/ncurses-5.9-rxvt-unicode-9.15.patch:
  updated rxvt-unicode terminfo. fixes bug #383871. acked by robbat2

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> ncurses-5.9-r1.ebuild:
  Don't link non-existing shared libraries on static-only platforms, bug #394877

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> ncurses-5.9-r1.ebuild:
  Cleanup some legacy

  28 Dec 2011; Mark Loeser <halcy0n@gentoo.org> ncurses-5.9.ebuild:
  Stable for ppc/ppc64; bug #377631

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> ncurses-5.9.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #377631

  03 Dec 2011; Markus Meier <maekke@gentoo.org> ncurses-5.9.ebuild:
  arm stable, bug #377631

  02 Dec 2011; Steve Dibb <beandog@gentoo.org> ncurses-5.9.ebuild:
  amd64 stable, bug 377631

  30 Nov 2011; Jeroen Roovers <jer@gentoo.org> ncurses-5.9.ebuild:
  Stable for HPPA (bug #377631).

  28 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> ncurses-5.9.ebuild:
  x86 stable wrt bug #377631

*ncurses-5.9-r1 (21 Nov 2011)

  21 Nov 2011; Mike Frysinger <vapier@gentoo.org> +ncurses-5.9-r1.ebuild:
  Install pkg-config files.

  13 Nov 2011; Mike Frysinger <vapier@gentoo.org> -ncurses-5.6-r2.ebuild,