@@ -28,13 +28,13 @@ DIST ncurses-5.7.tar.gz 2445052 RMD160 a19ca026d32255f5a4d22eb006d65182041e0234 
 DIST ncurses-5.9.tar.gz 2826473 RMD160 dd7dffe38fcc908230ce3e036b71ced2d270ac9e SHA1 3e042e5f2c7223bffdaac9646a533b8c758b65b5 SHA256 9046298fb440324c9d4135ecea7879ffed8546dd1b58e59430ea07a4633f563b
 EBUILD ncurses-5.7-r7.ebuild 8100 RMD160 945ff3ee530300047cce1f59558db72d323fa7a6 SHA1 4b408bdccac43b09387120d097a48a207dd01b4e SHA256 bbf69187e9c7ee398251f0549774e1c5294b869e45d01a043a4c36bf0273eeaa
 EBUILD ncurses-5.9-r1.ebuild 7771 RMD160 7952187a80e1d18421af251e626d69130ee6139b SHA1 a09ad17c4a2d0ad49eed0ffd04e1a61775cafefa SHA256 1a6b225c3eb4fc9734ba9670a5fd66529e8324bc27e095dfb1f32455e0c9719f
-EBUILD ncurses-5.9-r2.ebuild 7795 RMD160 1980dc540503cb64026c015b880537d48a8f4d9b SHA1 8ab6aed0fd2773c3079754629fb8df5e810c4c94 SHA256 4a9cc5730d2ff2323b705a8183d2833a185da2c9628f3ea4400ec32e69e19aa3
-MISC ChangeLog 29242 RMD160 f611671173f374fa08be7cdc85d8742df7d00887 SHA1 e05a6629c3521f8f380d3391a37e8a73050bd8ad SHA256 b4cc50203230cc9c0c1ff834f975e33913f74f84f673231d64a0483d956b9fb3
+EBUILD ncurses-5.9-r2.ebuild 8212 RMD160 fd2e62fb28cf6f86b36b0a4eb22788e1c6a69de7 SHA1 a1ec7a862e454f38799420dceebbe6f627266d7e SHA256 333dbd0585e7baa4cccdb2459b3643d7efd6424991852fb384a28b4cf66c6dc2
+MISC ChangeLog 29359 RMD160 0970f05ee317efd455e9254a6fc351987f616c98 SHA1 e75384b592a12def5f6f0fc7b66328d70610f14f SHA256 5d2018757ab9fe58d5b4f6d8f579451946edc11dab300e2a2449d8486a33d009
 MISC metadata.xml 320 RMD160 cd60b146f09101932293157c33ac98f273c92783 SHA1 47c720e1ec7ce4a1c4de36edeac9cfd10004bbae SHA256 906f778ea6ad65cad63404d3bd4126d32dcaef8fa0dd81d0108fd20630594779
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (Darwin)
+Version: GnuPG v2.0.18 (SunOS)
 
-iEUEARECAAYFAk+lLn8ACgkQX3X2B8XHTokTogCXWh2hmMilzO1iiZ+Iq2hERAkQ
-CACgl6UtwzuiG4hyKDIlKnFJ7QRjWeI=
-=NiIk
+iEYEARECAAYFAk+lXcMACgkQX3X2B8XHToln6gCgju8/ue7bsl1QIVGCpCM7bwH+
+WQMAoIW7PPv8cg/2zAzf8Di/BtfmQqNo
+=odLg
 -----END PGP SIGNATURE-----
